--- a/templates/default/create_mysql_database.sql.erb
+++ b/templates/default/create_mysql_database.sql.erb
@@ -7,6 +7,6 @@
 
 CREATE DATABASE IF NOT EXISTS bamboo CHARACTER SET utf8 COLLATE utf8_bin;
 
-GRANT ALL ON sonar.* TO '<%= node['bamboo']['jdbc_username'] %>'@'localhost' IDENTIFIED BY '<%= node['bamboo']['jdbc_password'] %>';
-GRANT ALL ON sonar.* TO '<%= node['bamboo']['jdbc_username'] %>'@'%' IDENTIFIED BY '<%= node['bamboo']['jdbc_password'] %>';
+GRANT ALL ON bamboo.* TO '<%= node['bamboo']['jdbc_username'] %>'@'localhost' IDENTIFIED BY '<%= node['bamboo']['jdbc_password'] %>';
+GRANT ALL ON bamboo.* TO '<%= node['bamboo']['jdbc_username'] %>'@'%' IDENTIFIED BY '<%= node['bamboo']['jdbc_password'] %>';
 FLUSH PRIVILEGES;
