add gradle support add ibm jdk

--- a/templates/default/bamboo-init.properties.erb
+++ b/templates/default/bamboo-init.properties.erb
@@ -1,3 +1,5 @@
 ## You can specify your bamboo.home property here or in your system environment variables.
 
 bamboo.home=<%= @bamboo_home %>
+
+# bamboo.jms.broker.uri=tcp://<%= @bamboo_ip %>:54663
