set android sdk

--- a/templates/default/wrapper.conf.erb
+++ b/templates/default/wrapper.conf.erb
@@ -41,6 +41,7 @@ wrapper.java.additional.3=-Xms<%= @xms %>
 wrapper.java.additional.4=-Xmx<%= @xmx %>
 wrapper.java.additional.5=-XX:MaxPermSize=<%= @permsize %>
 wrapper.java.additional.6=-Djava.awt.headless=true
+wrapper.java.additional.7=-DDISABLE_AGENT_AUTO_CAPABILITY_DETECTION=true
 
 wrapper.working.dir=.
 
