fixed seraph config

--- a/templates/default/seraph-config.xml.erb
+++ b/templates/default/seraph-config.xml.erb
@@ -54,7 +54,7 @@
 
     <!-- Determines what roles (permissions) a user has. -->
     <rolemapper class="com.atlassian.bamboo.user.authentication.BambooRoleMapper"/> -->
-    <!--  <authenticator class="com.atlassian.bamboo.user.authentication.BambooAuthenticator"/>
+    <!--  <authenticator class="com.atlassian.bamboo.user.authentication.BambooAuthenticator"/>  -->
     <controller class="com.atlassian.bamboo.user.authentication.BambooSecurityController"/>
     <elevatedsecurityguard class="com.atlassian.bamboo.user.authentication.BambooElevatedSecurityGuard"/>
 
