--- a/templates/default/procfile.monitrc.erb
+++ b/templates/default/procfile.monitrc.erb
@@ -3,6 +3,6 @@
 # bamboo-agent
 # ---------------------------------------------------------------
 
-check process bamboo with pidfile /mnt/data/bamboo/bin/bamboo-agent.pid
-start program "/bin/bash -c 'PID_FILE=/mnt/data/bamboo/bin/bamboo-agent.pid /etc/init.d/bamboo-agent start'" with timeout 60 seconds
-stop program  = "/bin/bash -c 'PID_FILE=/mnt/data/bamboo/bin/bamboo-agent.pid /etc/init.d/bamboo-agent stop'"
+check process bamboo with pidfile "#{node[:bamboo][:home_path]}/bin/bamboo-agent.pid"
+start program "/bin/bash -c 'PID_FILE=#{node[:bamboo][:home_path]}/bin/bamboo-agent.pid /etc/init.d/bamboo-agent start'" with timeout 60 seconds
+stop program  = "/bin/bash -c 'PID_FILE=#{node[:bamboo][:home_path]}/bin/bamboo-agent.pid /etc/init.d/bamboo-agent stop'"
