--- a/templates/default/setenv.sh.erb
+++ b/templates/default/setenv.sh.erb
@@ -6,7 +6,7 @@
 #
 # One way to set the Bamboo HOME path is here via this variable.  Simply uncomment it and set a valid path like /bamboo/home.  You can of course set it outside in the command terminal.  That will also work.
 #
-#BAMBOO_HOME="<%= node['bamboo']['bamboo_home'] %>"
+#BAMBOO_HOME="<%= node['bamboo']['data_dir'] %>"
 
 #
 #  Occasionally Atlassian Support may recommend that you set some specific JVM arguments.  You can use this variable below to do that.
