--- a/templates/default/bamboo-agent.sh.erb
+++ b/templates/default/bamboo-agent.sh.erb
@@ -39,7 +39,7 @@ PIDDIR="."
 #  the JVM and is not useful in situations where a privileged resource or
 #  port needs to be allocated prior to the user being changed.
 RUN_AS_USER=<%= node[:bamboo][:user] %>
-export HOME=<%= node[:bamboo][:home_path] %>
+export HOME=<%= node[:bamboo][:user_home] %>
 
 # The following two lines are used by the chkconfig command. Change as is
 #  appropriate for your application.  They should remain commented.
