--- a/templates/default/seraph-config.xml.erb
+++ b/templates/default/seraph-config.xml.erb
@@ -6,24 +6,31 @@
     <parameters>
         <init-param>
             <param-name>login.url</param-name>
+            <% if node[:bamboo][:version] >= '5.13' -%>
+            <param-value>/userlogin!doDefault.action?os_destination=${originalurl}</param-value>
+            <% else -%>
             <param-value>/userlogin!default.action?os_destination=${originalurl}</param-value>
+            <% end -%>
         </init-param>
 
-      <init-param>
+        <init-param>
         <!--
           the URL to redirect to when the user explicitly clicks on a login link (rather than being redirected after
           trying to access a protected resource). Most of the time, this will be the same value as 'login.url'.
             - same properties as login.url above
         -->
-        <param-name>link.login.url</param-name>
-        <param-value>/userlogin!default.action?os_destination=${originalurl}</param-value>
-        <!--<param-value>/secure/Dashboard.jspa?os_destination=${originalurl}</param-value>-->
-        <!--<param-value>http://sso.mycompany.com/login?redirectTo=${originalurl}</param-value>-->
-      </init-param>
+          <param-name>link.login.url</param-name>
+          <% if node[:bamboo][:version] >= '5.13' -%>
+          <param-value>/userlogin!doDefault.action?os_destination=${originalurl}</param-value>
+          <% else -%>
+          <param-value>/userlogin!default.action?os_destination=${originalurl}</param-value>
+          <% end -%>
+          <!--<param-value>/secure/Dashboard.jspa?os_destination=${originalurl}</param-value>-->
+          <!--<param-value>http://sso.mycompany.com/login?redirectTo=${originalurl}</param-value>-->
+        </init-param>
 
-
-      <init-param>
-            <!-- called my the logout servlet -->
+        <init-param>
+            <!-- called by the logout servlet -->
             <param-name>logout.url</param-name>
             <param-value>/userLogout.action?os_destination=${originalurl}</param-value>
         </init-param>
@@ -53,8 +60,7 @@
     </parameters>
 
     <!-- Determines what roles (permissions) a user has. -->
-    <rolemapper class="com.atlassian.bamboo.user.authentication.BambooRoleMapper"/> -->
-    <!--    -->
+    <rolemapper class="com.atlassian.bamboo.user.authentication.BambooRoleMapper"/>
     <controller class="com.atlassian.bamboo.user.authentication.BambooSecurityController"/>
     <elevatedsecurityguard class="com.atlassian.bamboo.user.authentication.BambooElevatedSecurityGuard"/>
 
@@ -63,11 +69,12 @@
          Crowd property changes at runtime. If you need to switch back to local users, revert the change and
          restart Bamboo again.
      -->
-  <% if node[:bamboo][:crowd] == true -%>
+    <!-- <authenticator class="com.atlassian.crowd.integration.seraph.v25.BambooAuthenticator"/> -->
+    <% if node[:bamboo][:crowd] == true -%>
     <authenticator class="com.atlassian.crowd.integration.seraph.v25.BambooAuthenticator"/>
-  <% else -%>
+    <% else -%>
     <authenticator class="com.atlassian.bamboo.user.authentication.BambooAuthenticator"/>
-  <% end -%>
+    <% end -%>
 
   <services>
         <!-- Specifies role requirements for accessing specified URL paths -->
@@ -78,4 +85,8 @@
             </init-param>
         </service>
     </services>
+
+  <interceptors>
+    <interceptor class="com.atlassian.bamboo.user.authentication.InvalidateSessionDuringLogin"/>
+  </interceptors>
 </security-config>
