--- a/templates/default/web_app.conf.erb
+++ b/templates/default/web_app.conf.erb
@@ -13,6 +13,11 @@
 	<% end -%>
 	DocumentRoot <%= node['bamboo']['home_dir'] %>
 
+
+	<% unless node['bamboo']['apache2']['error_docs']['e503'].empty? -%>
+  ErrorDocument 503 <%= node['bamboo']['apache2']['error_docs']['e503'] %>
+  <% end -%>
+
 	CustomLog <%= node['bamboo']['apache2']['access_log'].empty? ? node['apache']['log_dir']+"/bamboo-access.log" : node['bamboo']['apache2']['access_log'] %> combined
 	ErrorLog <%= node['bamboo']['apache2']['error_log'].empty? ? node['apache']['log_dir']+"/bamboo-error.log" : node['bamboo']['apache2']['error_log'] %>
 	LogLevel warn
@@ -34,9 +39,15 @@
 	<% end -%>
 	DocumentRoot <%= node['bamboo']['home_dir'] %>
 
+	<% unless node['bamboo']['apache2']['error_docs']['e503'].empty? -%>
+  ErrorDocument 503 <%= node['bamboo']['apache2']['error_docs']['e503'] %>
+  <% end -%>
+
 	CustomLog <%= node['bamboo']['apache2']['ssl']['access_log'].empty? ? node['apache']['log_dir']+"/bamboo-ssl-access.log" : node['bamboo']['apache2']['ssl']['access_log'] %> combined
 	ErrorLog <%= node['bamboo']['apache2']['ssl']['error_log'].empty? ? node['apache']['log_dir']+"/bamboo-ssl-error.log" : node['bamboo']['apache2']['ssl']['error_log'] %>
 	LogLevel warn
+	ProxyRequests Off
+  ProxyPreserveHost On
 
 	<Proxy *>
 	<% if node['apache']['version'].to_f < 2.4 -%>
