--- a/templates/default/procfile.monitrc.erb
+++ b/templates/default/procfile.monitrc.erb
@@ -4,5 +4,5 @@
 # ---------------------------------------------------------------
 
 check process bamboo with pidfile "<%= node[:bamboo][:agent][:data_dir] %>/bin/bamboo-agent.pid"
-start program "/bin/bash -c 'PID_FILE=<%= node[:bamboo][:agent][:data_dir] %>/bin/bamboo-agent.pid /etc/init.d/bamboo-agent start'" with timeout 60 seconds
-stop program  = "/bin/bash -c 'PID_FILE=<%= node[:bamboo][:agent][:data_dir] %>/bin/bamboo-agent.pid /etc/init.d/bamboo-agent stop'"
+start program "/bin/bash -c 'PID_FILE=<%= node[:bamboo][:agent][:data_dir] %>/bin/bamboo-agent.pid service bamboo-agent start'" with timeout 60 seconds
+stop program  = "/bin/bash -c 'PID_FILE=<%= node[:bamboo][:agent][:data_dir] %>/bin/bamboo-agent.pid service bamboo-agent stop'"
