--- a/templates/default/bamboo-agent.plist.erb
+++ b/templates/default/bamboo-agent.plist.erb
@@ -10,9 +10,8 @@
       <string>start</string>
     </array>
   <key>UserName</key>
-  <string><%= @username %></string>
+  <string><%= @user %></string>
   <key>KeepAlive</key>
   <true/>
 </dict>
 </plist>
-
