--- a/templates/default/bamboo-init.properties.erb
+++ b/templates/default/bamboo-init.properties.erb
@@ -5,4 +5,4 @@
 
 ## You can specify your bamboo.home property here or in your system environment variables.
 
-bamboo.home=<%= node[:bamboo][:data_dir] %>
+bamboo.home=<%= @data_dir %>
