--- a/templates/default/bamboo.service.erb
+++ b/templates/default/bamboo.service.erb
@@ -4,10 +4,10 @@ After=syslog.target network.target
 
 [Service]
 Type=forking
-User=<%= node[:bamboo][:user] %>
-Group=<%= node[:bamboo][:group] %>
-ExecStart=<%= node[:bamboo][:home_dir] %>/bin/start-bamboo.sh
-ExecStop=<%= node[:bamboo][:home_dir] %>/bin/stop-bamboo.sh
+User=<%= @user %>
+Group=<%= @group %>
+ExecStart=<%= @home_dir %>/bin/start-bamboo.sh
+ExecStop=<%= @home_dir %>/bin/stop-bamboo.sh
 
 [Install]
 WantedBy=multi-user.target
