- fix crowd.properties template - for ubuntu > 14.04 force postgresql 9.5

--- a/templates/default/crowd.properties.erb
+++ b/templates/default/crowd.properties.erb
@@ -1,4 +1,4 @@
-!-- This file is maintained by Chef. Please do not edit manually. -->
+<!-- This file is maintained by Chef. Please do not edit manually. -->
 
 application.name                        <%= @app_name %>
 application.password                    <%= @app_password %>
