- fix pid file location - fix openjdk issue with ssl for server on ubuntu - set service name - add more versions with sha's

--- a/templates/default/bamboo.init.erb
+++ b/templates/default/bamboo.init.erb
@@ -25,7 +25,7 @@
 
 # Define some variables
 # Name of app ( JIRA, Confluence, etc )
-APP=bamboo
+APP=<%= @name %>
 # Name of the user to run as
 USER=<%= @user %>
 # Location of application's base directory
