--- a/templates/default/bamboo.service.erb
+++ b/templates/default/bamboo.service.erb
@@ -6,6 +6,7 @@ After=syslog.target network.target
 Type=forking
 User=<%= @user %>
 Group=<%= @group %>
+Environment=PATH=<%= node[:bamboo][:agent][:additional_path] %>:$JAVA_HOME/bin:$PATH
 ExecStart=<%= @home_dir %>/bin/start-bamboo.sh
 ExecStop=<%= @home_dir %>/bin/stop-bamboo.sh
 
